<resources>
    <string name="app_name">Arogya Kavacha</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="not_registered">not_registered</string>
    <string name="register">register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="new_registration">new_registration</string>
    <string name="re">REGISTER</string>
    <string name="not_register">Not Registered?</string>
    <string name="title_activity_sapthagiri">SapthagiriActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="care_centres">Sri Jayadeva Institute of Cardiology has today carved a niche for itself in quality cardiac care in the country. Spread on a sprawling 13 acres of land in Jayanagar, Jayadeva Institute is an exclusively dedicated 540 bed heart hospital and is considered to be one of the largest in Asia Pacific region.</string>
    <string name="prevention">You should consider scheduling an appointment if you:</string>
    <string name="diagnosis">At Sri Jayadeva Institute of Cardiology, our compassionate team of cardiovascular experts employ the latest technology to diagnose threats to your heart health.\n\nThe Cardiac Catheterization Laboratory performs diagnostic procedures to determine the extent of disease present in the vascular system. The method involves threading a long, thin tube (called a catheter) through an artery or vein in the leg or arm and into the heart.\n\nDoctors at the Center for Arrhythmias and Electrophysiology have developed and are using state-of-the-art techniques to diagnose arrhythmias.\n\nIn the Echocardiography Laboratory, experts use sound waves to produce an image of the heart and to see how it is functioning. They can also determine how the heart valves are working and how blood is flowing through your heart.\n\nThe Heart Center can diagnose congestive heart failure and other cardiovascular problems using a variety of techniques</string>
    <string name="treatment">For every heart condition or disease, a range of treatments can be considered. Cardiovascular care experts at Sri Jayadeva Institute of Cardiology will work with you to determine the best treatment option for you or a loved one.\n\nInterventional treatments performed in the Cardiac Catheterization Laboratory include balloon angioplasty, placement of a stent, atherectomy (removal of plaque), implantation of a pacemaker, and more.\n\nTreatment recommended by the Heart and Lung Treatment and Transplant Center may include lifestyle changes, medicines, device implantation, and surgery. Studies show that medicines also help improve your heart function and make it easier for you to exercise or perform physical activity.\n\nThe right treatment for arrhythmias depends on each persons condition and exact diagnosis. At the Center for Cardiac Arrhythmias and Electrophysiology, treatment options range from drug therapy to implantable devices, radiofrequency ablation, and open heart surgery.\n\nFor some patients, the best options may be a heart transplant or the implantation ventricular assist device (VAD).</string>
    <string name="kidwaiIntro">Kidwai Memorial Institute of Oncology was established way back in 1957 as a small cancer centre by the Mayor of Bangalore. The Government of Karnataka took over the Society in 1970. In 1980, it became an Autonomous Institute registered under the Societies Registration Act and was deemed as Regional Cancer Centre in the same year by Government of India. This is one of the 27 Regional Cancer Centers available in our country. It is a member of the UICC (International Union Against Cancer). This Institute is recognized by the WHO as an Institute of Excellence.\n\nThis Institute is a Comprehensive Cancer Centre treating almost 20,000 new cancer patients every year with a follow-up of 2,50,000 patients per annum. We have a Cancer Detection Unit, which has got mobile unit apart from the clinic functioning regularly in-house.</string>
    <string name="kidwaiPrevention">At present, we are having a Department of Cancer Detection and Screening Unit which does both hospital based as well as field based cancer detection programmes. We have been conducting cancer detection camps for the last 25 years and the detection rate is 1.5% of proved cancers and 1.5% of suspected cancers.\nDuring the camps, apart from screening, cancer health education is also performed in the form of short documentary films, didactic lectures, interactive sessions, posters, etc. to create cancer awareness</string>
    <string name="KidwaiLab">a. Histopathology\nb. Cytopathology\nc. Hematology\nd. Cytogenetics and Molecular Biology\ne. Biochemistry\nf. Microbiology\ng. Immunology</string>
    <string name="KidwaiTreatment">1. Surgical Oncology\n2. Head and Neck Oncology\n3. Oral Oncology\n4. Gynaecologic Onocology\n5.Surgical Oncology:</string>
    <string name="NimhansAbout">The National Institute of Mental Health and Neuro Sciences (NIMHANS) is a multidisciplinary institute for patient care and academic pursuit in the field of mental health and neurosciences.\n\nNIMHANS is synonymous with providing high standards of clinical care, quality training and cutting-edge research in the frontier areas. Combined priorities for comprehensive patient care, manpower development and research, stem from the commitment to an integrated and multidisciplinary approach which addresses societal needs. The advances in genomics, computational neuroscience, mathematical modelling, neuroimaging, molecular biology and a host of new disciplines including public health,  are being translated to help  humanity in need and promote the growth of knowledge.</string>
    <string name="Inpatient">Patients who require detailed evaluation and observation are admitted and managed as per the admission protocol of each department of Neurology, Neurosurgery and Psychiatry.</string>
    <string name="Outpatient">Out patient services for non-emergency cases are run on all days except Sunday and general OPD holidays (Monday, Tuesday, Wednesday, Thursday, Friday and Saturday) from morning 9.00 A.M. On an average about 150 new and old patients in all three specialities of Neurology, Neurosurgery and Psychiatry patients are seen per day in these services.</string>
    <string name="FortisIntro">Urology / Andrology deals with the medical issues related to the male and female urinary tract and the male reproductive organs. The treatment of kidneys, adrenal glands, urinary bladder, ureters, urethra and the male reproductive organs including the testes, prostate, penis, and epididymis come under this discipline.\n\nUrologists in Fortis Hospitals, Bangalore are at the cutting edge of the practice in the country and have vast experience in minimally invasive laparoscopic surgery, laser-assisted surgeries and a host of other scope-guided procedures. Our specialization in minimally invasive techniques employing ultrasound guidance, fiber optic endoscopic equipment and lasers ensure that our patients have access to cutting edge urological care. Our Urology Center is on par with the best facilities in the world and guarantees the latest in technology and care.\n\nWe have treated patients with a wide range of urological issues including various forms of acute and chronic prostate conditions, pediatric urological ailments, kidney disorders, kidney stones, kidney transplants and more.</string>

</resources>


