<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/un2"
        android:paddingLeft="1mm"
        android:hint="Email"
        android:maxLines="1"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:paddingLeft="1mm"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/pw2"
        android:hint="@string/password"
        android:maxLines="1"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnstyle"
        android:backgroundTint="#0AF121"
        android:textColor="#ffffff"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_register"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/re"
            android:paddingLeft="10dp"
            android:textColor="#0AF121"
            android:textStyle="bold"/>
    </LinearLayout>




</LinearLayout>