<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KidwaiActivity">

    <ImageView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/kidwai" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KIDWAI MEMORIAL INSTITUTE OF ONCOLOGY"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="#000000"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/add_bg" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About"
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kidwaiIntro"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#1b2631" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Screening and Prevention"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kidwaiPrevention"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#1b2631" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diagnostics and  Laboratory Services"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/KidwaiLab"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Treatment Facilities"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Surgery:"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/KidwaiTreatment"/>


    </LinearLayout>
</LinearLayout>
</ScrollView>