<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JaydevaActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/jaydeva" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SRI JAYADEVA INSTITUTE OF CARDIOVASCULAR SCIENCES"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:textColor="#000000"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/add_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About"
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/care_centres"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#1b2631" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prevention"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="1. Are over 50"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="2. Are diabetic"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="3. Have high blood pressure (above 140/90)"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="4. Have high cholesterol"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="5. Are at least 10 pounds overweight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diagnosis"
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diagnosis"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#1b2631" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Treatment"
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treatment"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#1b2631" />

          <TextView
              android:id="@+id/marquee"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:textStyle="italic"
              android:layout_marginBottom="10dp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>




