<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NimhansActivity">

    <ImageView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/nimhans" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NATIONAL INSTITUTE OF MENTAL HEALTH AND NEUROSCIENCES"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="13sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/add_bg" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About"
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NimhansAbout"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#1b2631" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient Care"
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="In Patient Services:"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Inpatient"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#1b2631" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Out Patient Services:"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Outpatient"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#1b2631" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Laboratory Services:"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="a. Neurochemistry Lab Services"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="b. Neuromicrobiology Lab Services"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="c. Pathology Lab Services"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="d. Virology Lab Services"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/marquee2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#1b2631"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="For Booking Appointment click below button..."/>

        <ImageButton
            android:id="@+id/callNimhans"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_call_1"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_round"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>